@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-07T01:49:32Z",
-  "count_outdated" : 115,
-  "uniques_outdated" : 36,
+  "timestamp" : "2022-05-07T08:28:38Z",
+  "count_outdated" : 116,
+  "uniques_outdated" : 37,
   "count" : 131,
   "uniques" : 51,
   "clones" : [
-    {
-      "timestamp": "2022-04-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-25T00:00:00Z",
       "count": 2,
